Bug 475896 - TVT_IES45_Orion: Bad alignment appeared on many languages

--- a/bundles/org.eclipse.orion.client.git/web/git/css/git.css
+++ b/bundles/org.eclipse.orion.client.git/web/git/css/git.css
@@ -195,6 +195,7 @@
 	padding-top: 5px;
 	margin: 0;
 	opacity: 1;
+	min-height: 35px;
 }
 
 .commitFilter.sectionWrapper.sectionClosed:hover {
@@ -202,7 +203,7 @@
 }
 
 .commitFilter .sectionTitle {
-	min-width: 80px;
+	width: 100px;
 	color: #333;
 	padding-left: 3px;
 }
